--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,5 +19,24 @@ if (CMAKE_VERSION VERSION_GREATER 3.12)
 endif()
 
 # TODO: Add tests and install targets if needed.
-include(CTest)
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
 enable_testing()
+
+add_executable(simple_test "tests/wrapper_test.cpp")
+
+target_link_libraries(
+	simple_test
+  GTest::gtest_main
+)
+
+include(GoogleTest)
+gtest_discover_tests(simple_test)
